--- a/index.html
+++ b/index.html
@@ -585,7 +585,10 @@
             </div>
             <p>C-101</p>
             <p>$40</p>
-            <p>سينما مصر , مول العرب , برج الأطنان , سرايا القبة ...</p>
+            <p class="position-relative hint">
+              سينما مصر , مول العرب , برج الأطنان , سرايا القبة ...
+              <span class="position-absolute">صيدناوي مول , برج العرب</span>
+            </p>
             <p>1</p>
             <p>مرة واحدة</p>
             <div class="ticket-detitls d-flex align-items-center gap-2">
@@ -662,7 +665,10 @@
             </div>
             <p>C-101</p>
             <p>$40</p>
-            <p>سينما مصر , مول العرب , برج الأطنان , سرايا القبة ...</p>
+            <p class="position-relative hint">
+              سينما مصر , مول العرب , برج الأطنان , سرايا القبة ...
+              <span class="position-absolute">صيدناوي مول , برج العرب</span>
+            </p>
             <p>1</p>
             <p>مرة واحدة</p>
             <div class="ticket-detitls d-flex align-items-center gap-2">
@@ -756,7 +762,10 @@
             </div>
             <p>C-101</p>
             <p>$40</p>
-            <p>سينما مصر , مول العرب , برج الأطنان , سرايا القبة ...</p>
+            <p class="position-relative hint">
+              سينما مصر , مول العرب , برج الأطنان , سرايا القبة ...
+              <span class="position-absolute">صيدناوي مول , برج العرب</span>
+            </p>
             <p>1</p>
             <p>مرة واحدة</p>
             <div class="ticket-detitls d-flex align-items-center gap-2">
