--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         </div>
         <!-- sales -->
         <div
-          class="sales mt-3 mb-4 d-flex align-items-center justify-content-between gap-3"
+          class="sales mt-3 mb-4 d-flex align-items-center justify-content-between gap-3 flex-column flex-sm-row"
         >
           <h3>مبيعات التذاكر</h3>
           <div class="settings flex-md-grow-1 d-flex gap-2 align-items-center">
@@ -414,7 +414,9 @@
               </svg>
             </div>
           </div>
-          <div class="toggles d-flex gap-2 align-items-center">
+          <div
+            class="toggles d-flex gap-2 align-items-center justify-content-end justify-content-md-between"
+          >
             <div class="mt-2">
               <label>
                 <input class="toggle-checkbox" type="checkbox" checked />
